# buffalo

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: ci-all.yml  docs.yml
docs/html/: annotated.html  annotated_dup.js  buffalo_8h.html  buffalo_8h.js  buffalo_8h_source.html  classbf_1_1_define_non_terminal-members.html  classbf_1_1_define_non_terminal.html  classbf_1_1_define_non_terminal.js  classbf_1_1_define_terminal-members.html  classbf_1_1_define_terminal.html  classbf_1_1_define_terminal.js  classbf_1_1_error-members.html  classbf_1_1_error.html  classbf_1_1_error.js  classbf_1_1_grammar-members.html  classbf_1_1_grammar.html  classbf_1_1_grammar.js  classbf_1_1_grammar_definition-members.html  classbf_1_1_grammar_definition.html  classbf_1_1_grammar_definition.js  classbf_1_1_non_terminal-members.html  classbf_1_1_non_terminal.html  classbf_1_1_non_terminal.js  classbf_1_1_parser-members.html  classbf_1_1_parser.html  classbf_1_1_parser.js  classbf_1_1_production_rule-members.html  classbf_1_1_production_rule.html  classbf_1_1_production_rule.js  classbf_1_1_reduce_reduce_error-members.html  classbf_1_1_reduce_reduce_error.html  classbf_1_1_s_l_r_parser-members.html  classbf_1_1_s_l_r_parser.html  classbf_1_1_s_l_r_parser.js  classbf_1_1_semantic_conversion_error-members.html  classbf_1_1_semantic_conversion_error.html  classbf_1_1_shift_reduce_error-members.html  classbf_1_1_shift_reduce_error.html  classbf_1_1_shift_shift_error-members.html  classbf_1_1_shift_shift_error.html  (+78 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  concepts_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  functions_0.js  functions_1.js  (+38 more)
examples/: calculator.cpp
include/buffalo/: buffalo.h  buffalo2.h  spex.h
test/: badjson.cpp  basic.test.cpp  buffalo.test.cpp  calculator.test.cpp  calculator2.test.cpp  grammar.test.cpp  lang.test.cpp  smartptr.test.cpp  stmtlist.test.cpp  tokenizer.test.cpp
test/parsers/: Parser.h  calculator.cpp  list.cpp
